# git-lyze

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: cache.rs  commit.rs  config.rs  convention.rs  conventionstyle.rs  customerror.rs  defaults.rs  lib.rs  main.rs  ownerships.rs  repo.rs  reporters.rs  test_utils.rs  tracker.rs  utils.rs
src/window/: app.rs  event.rs  mod.rs  screen.rs  tui.rs  ui.rs  update.rs
src/window/components/: chart.rs  counter_paragraph.rs  files.rs  header.rs  mod.rs
