[package]
name = "git-lyze"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = ["repo"]
repo = ["dep:git2"]

[dependencies]
clap = { version = "4.4.6", features = ["derive"] }
tempfile = "3.8.0"
thiserror = "1.0.49"
regex = "1.10.1"

[dependencies.git2]
version = "0.18.1"
default-features = false
optional = true
