[package]
name = "git-lyze"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = ["repo"]
repo = ["dep:git2"]

[dependencies]
clap = { version = "4.4.6", features = ["derive"] }
tempfile = "3.8.0"
thiserror = "1.0.49"
regex = "1.10.1"
serde_json = "1.0.107"
serde = {version = "1.0.190", features = ["derive"]}
colored = "2.0.4"
chrono = "0.4.31"
env_logger = "0.10.1"
log = "0.4.20"
ratatui = "0.25.0"
crossterm = "0.27.0"

[dependencies.git2]
version = "0.18.1"
default-features = false
optional = true
